add swagger for get tasks endpoint
